--- a/journal/202007.md
+++ b/journal/202007.md
@@ -177,13 +177,13 @@ There were 7 proposals submitted in July:
 - [Proposal](https://proposals.decred.org/proposals/dedf452074752d7e29304a0566643feb26d1d130596e04c613e15de113ac2d08) to spend $15,000 creating augmented reality posters.
 - [Proposal](https://proposals.decred.org/proposals/32cba00b8bb0f41689ca8216e2e14a0e3d91a724c83369b3fcda02490dc119f4) to cover moderation of Matrix, Discord, Telegram and Politeia, max $9,000 expected $4,800 for 6 months. This work is already being done and paid for, the proposal is to formalize this and put a limit on how much can be billed for it.
 - [Proposal](https://proposals.decred.org/proposals/2dcbc3e14c06c6e84449f5e2756b944d5ed23be41c23a9f5225f3eef424ce0ae) to offer DCR as a payment option on two travel booking websites ($30K), plus some promotional activities ($21.5K).
-- [Proposal](https://proposals.decred.org/proposals/3372cfce1218ba81d9c8ca0535cd9dd590f60c92adc068c0089218ae7e3e99e1) to spend $10K on a range of marketing activities (including paid retweets/endorsements and advertisements) - associated reddit [post](https://www.reddit.com/r/decred/comments/hzo3yu/creating_a_decred_marketing_workgroup/).
+- [Proposal](https://proposals.decred.org/proposals/3372cfce1218ba81d9c8ca0535cd9dd590f60c92adc068c0089218ae7e3e99e1) to spend $10K on a range of marketing activities (including paid retweets/endorsements and advertisements) - associated Reddit [post](https://www.reddit.com/r/decred/comments/hzo3yu/creating_a_decred_marketing_workgroup/).
 - [Proposal](https://proposals.decred.org/proposals/4f81031) to create 20 social media memes for 10 DCR/meme.
 - [Proposal](https://proposals.decred.org/proposals/7a67ed5) to host a series of poker games with DCR prizes (300 DCR/month).
 
 Two of these proposals have an issue with DCR-denominated budgets.
 
-Also this month the question of changing DCR issuance was put to a reddit [poll](https://www.reddit.com/r/decred/comments/hz9i6d/poll_the_decred_great_inflation/) by @checkmate, in an effort to put the issue to rest. The poll attracted 87 votes, and 65 were against any further consideration of changing the DCR issuance policy.
+Also this month the question of changing DCR issuance was put to a Reddit [poll](https://www.reddit.com/r/decred/comments/hz9i6d/poll_the_decred_great_inflation/) by @Checkmate, in an effort to put the issue to rest. The poll attracted 87 votes, and 65 were against any further consideration of changing the DCR issuance policy.
 
 Check Politeia Digest [issue 33](https://blockcommons.red/politeia-digest/issue033/) for more details about the first two of these, issue 34 with details of the other new proposals will be out soon.
 
@@ -220,9 +220,9 @@ The subject of marketing saw a considerable discussion on Reddit and Matrix, and
 @Checkmate has been stirring the pot of grassroots outreach and other ideas on Reddit, with regular and irregular posts provoking discussion that has also spilled over into some other marketing-related discussion posts. This month's outreach braindroplets:
 
 - @mrbulb posted a [Workshop Wednesday](https://www.reddit.com/r/decred/comments/hj7n52/what_is_decred_workshopwednesday/), inviting people to explore the 4 key stages of narrative development with him.
-- FTF Jul 3 - Decred [Artwork](https://www.reddit.com/r/decred/comments/hkfj1r/forward_thinking_friday_decred_artwork_03_july/), developing the concept of an art competition.
+- Forward Thinking Friday (FTF) Jul 3 - Decred [Artwork](https://www.reddit.com/r/decred/comments/hkfj1r/forward_thinking_friday_decred_artwork_03_july/), developing the concept of an art competition.
 - Skepticism Sunday, Jul 5 considered hardware wallets and staking, @jy-p [knows](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx38dq3/) a new dev who is into this kind of thing. This edition also featured an epic [ragequit](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx2xh21/) from an airdrop participant who bounced between DCR and XMR over the years, started staking in 2019 but is now done. Multiple surprising claims were questioned by @bee and [debunked](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx3j2j6/) by @jy-p.
-- Forward Thinking Friday (FTF) Jul 10 had [discussion](https://www.reddit.com/r/decred/comments/homdwc/forward_thinking_friday_10_july_2020/) about bringing DCR data to life for more people and showing off Decred's interesting and immaculately presented chain, plus rappers, graffiti and some skepticism that was shared on the wrong day.
+- FTF Jul 10 had [discussion](https://www.reddit.com/r/decred/comments/homdwc/forward_thinking_friday_10_july_2020/) about bringing DCR data to life for more people and showing off Decred's interesting and immaculately presented chain, plus rappers, graffiti and some skepticism that was shared on the wrong day.
 - Skepticism Sunday Jul 12 - [capture](https://www.reddit.com/r/decred/comments/hpsgye/decred_skepticism_sunday_12_july_2020/) of governance, losing the "currency" focus from messaging.
 - FTF Jul 17 on the subject of [differentiators](https://www.reddit.com/r/decred/comments/ht4r8a/forward_thinking_friday_differentiators_17_july/), looking at the different ways in which Decred stands out.
 - Skepticism Sunday Jul 19 - fiat on-ramps, [wrapping](https://www.reddit.com/r/decred/comments/htuac8/decred_skepticism_sunday_19_july_2020/) DCR in ETH.
