--- a/journal/202009.md
+++ b/journal/202009.md
@@ -70,17 +70,16 @@ Congratulations to new contractors granted the Decred Contractor Clearance (DCC)
 
 { interviews about people }
 
-Community stats as of {date}:
+Community stats as of Oct 1:
 
-- Politeia users: {} (+{})
-- Twitter followers: {} (+{})
-- Reddit subscribers: {} (+{})
-- Matrix #general users: {} (+{})
-- Discord users: {}, verified to post: {}
-- Telegram users: {} (+{})
-- YouTube subscribers: {} (+{}), views: {} (+{})
-- LinkedIn followers: {} (+{})
-- GitHub dcrd stars: {} (+{}), forks: {} (+{})
+- Twitter followers: 40,790 (-26)
+- Reddit subscribers: 9,929 (+23)
+- Matrix #general users: 197 (+23)
+- Discord users: 1,396 (+2)
+- Telegram users: 2,434 (-34)
+- YouTube subscribers: 4,210 (+30), views: 156K (+1.7K)
+- LinkedIn followers: 891 (+16)
+- GitHub dcrd stars: 563 (+6), forks: 248 (+2)
 
 ## Governance
 
