--- a/journal/202009.md
+++ b/journal/202009.md
@@ -174,6 +174,11 @@ Selected articles:
 
 > Since decentralization is a founding principle of the crypto-space it gets a lot of lip-service but one of the oldest problems with power is that it is extremely rare that once someone has it, they will give it up voluntarily. Decred is a rare exception and notable in the progress its developers have made in converting the projects resources into this autonomous system. Monero is another outlier here, as its development is completely funded by community donations.
 
+* https://medium.com/@decred.citizen/why-i-decred-8d83081b6fb8
+* https://medium.com/@permabullnino/decred-on-chain-dao-treasury-accounting-afb1ed989b0a
+
+
+
 Crypto media has picked up the "inv dos" vulnerability disclosed on Sep 11, which brought some mixed press for Decred:
 
 - { coverage, good and bad outcomes, timeline etc here https://github.com/xaur/notes/blob/master/invdos.md }
@@ -202,6 +207,9 @@ Comm systems news:
 Selected Reddit posts:
 
 - CloakCoin dev https://www.reddit.com/r/decred/comments/i11tjv/porting_cloak_coins_enigma_protocol_and/g4psjpr/
+- Everyone's favorite Wall Street CEO, /u/jamie-demon, has been busy [adding](https://www.reddit.com/r/decred/comments/j1ia6k/dcrdocs_on_ipfs_and_zeronet/) dcrdocs to IPFS and ZeroNet, and [DCRComic](https://www.reddit.com/r/decred/comments/iw333o/dcr_comic_on_ipfs/) to [IPFS](https://ipfs.io/ipfs/QmTp4mUpekf1Ptj32xZqSJkeEDjo3QrFvWvL7bJJBxH8u4)
+- A [post](https://www.reddit.com/r/decred/comments/iwu75w/bch_has_some_funding_and_governance_issues/) about BCH funding and governance issues attracted 45 comments, mostly in response to someone complaining about DCR.
+- @pavel is arranging an AMA interview and submitted a [post](https://www.reddit.com/r/decred/comments/j2gz5f/ask_me_anything_ama_what_would_you_ask_decreds/) to collect questions at the end of the month
 
 Selected Twitter discussions:
 
