--- a/journal/202009.md
+++ b/journal/202009.md
@@ -87,6 +87,10 @@ In September the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4D
 
 { high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail }
 
+{https://dcronchain.com/ launch here or somewhere else?}
+
+Bug Bounty update: https://twitter.com/degeri_crypto/status/1302977687028334594
+
 ## Network
 
 { section hint:
@@ -176,6 +180,7 @@ Selected articles:
 
 * https://medium.com/@decred.citizen/why-i-decred-8d83081b6fb8
 * https://medium.com/@permabullnino/decred-on-chain-dao-treasury-accounting-afb1ed989b0a
+* https://medium.com/authority-magazine/meet-the-disruptors-how-jake-yocom-piatt-of-decred-aims-to-redefine-governance-with-blockchain-5c3724f20e74
 
 
 
@@ -195,6 +200,14 @@ Videos:
 Audio:
 
 - {}
+- https://podcasts.apple.com/au/podcast/cyber-hacker/id1462830605?i=1000489977562
+- https://anchor.fm/staked-podcast/episodes/Staked-Podcast-Episode-0-0-3-ejq685/a-a38c12o
+- https://anchor.fm/staked-podcast/episodes/Interview-with-Pavel-Svitek-Co-founder-of-WithDecred-org-ek1749
+- https://anchor.fm/staked-podcast/episodes/Staked-Podcast-Episode-0-0-1-ej1839
+- Decred in Depth episode with @esizedave and @zohand of the Decred Australia team talking about their experiences presenting Decred to various audiences - what sticks, and what misses ([player.fm](https://player.fm/series/decred-in-depth/zohand-dave-decred-australia))
+- Decred in Depth with @ l1ndseymm giving her take on the role of PR, her experience of working with Decred's community and going through the proposal process, and strategies for raising the project's profile. ([anchor.fm](https://anchor.fm/staked-podcast/episodes/Staked-Podcast-Episode-0-0-3-ejq685/a-a38c12o))
+- 
+- 
 
 ## Community Discussions
 
@@ -213,7 +226,8 @@ Selected Reddit posts:
 
 Selected Twitter discussions:
 
-- {}
+- @richardred [tweeted](https://twitter.com/RichardRed0x/status/1310700935216271360) an animated painting, titled "Ticket Price All Time Highs Again"
+- Latest development news breaking on twitter from @[moo31337](https://twitter.com/marco_peereboom/status/1308125042149134336?s=20) (Decentralize Treasury Spending) and @[chappjc](https://twitter.com/chappjc/status/1302798545439817730) (dcrdex)
 
 ## Markets
 
@@ -240,6 +254,22 @@ New Bitshares hardfork
 { any Sep update on the ETC funding votes? }
 
 https://twitter.com/cryptobuzznews/status/1302221131772866560 { wow is this real? if yes, is this relevant? :) }
+
+https://twitter.com/aleph_im/status/1309946131183529986?s=20
+
+https://twitter.com/eth_classic/status/1307302168966373377?s=20
+
+https://twitter.com/CoinbasePro/status/1306641678506360832?s=20
+
+https://twitter.com/semenov_roman_/status/1305255435730063361?s=20
+
+https://read.cash/@Cain/the-current-bch-drama-for-outsiders-50b4dbb8
+
+https://twitter.com/Blockstream/status/1304529416131940352?s=20
+
+SUSHI and Chef Nomi
+
+Uniswap airdrop
 
 { from reddit:
 
