--- a/journal/202009.md
+++ b/journal/202009.md
@@ -91,6 +91,8 @@ In September the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4D
 
 Bug Bounty update: https://twitter.com/degeri_crypto/status/1302977687028334594
 
+{ dc/guidelines/proposals }
+
 ## Network
 
 { section hint:
@@ -187,11 +189,16 @@ Selected articles:
 Crypto media has picked up the "inv dos" vulnerability disclosed on Sep 11, which brought some mixed press for Decred:
 
 - { coverage, good and bad outcomes, timeline etc here https://github.com/xaur/notes/blob/master/invdos.md }
+- { one outlet fixed, thx Lindsey https://thedailychain.com/decred-clarify-details-of-reported-vulnerability/ }
 
 { insert a commentary from our devs here, unlike The Media }
+
 Translations:
 
 - {}
+
+- { #translations public room }
+- https://github.com/decredcommunity/translations/blob/master/index.md
 
 Videos:
 
@@ -213,7 +220,7 @@ Audio:
 
 Comm systems news:
 
-- {}
+- { DecredTrading tg }
 
 { selected discussed topics, as bullet list or one paragraph per topic }
 
