--- a/journal/202009.md
+++ b/journal/202009.md
@@ -6,13 +6,37 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 { introduction, major news of the month ordered by impact, don't put any links here }
 
+- treasury PR merged
+- dcronchain launch
+- first RFP
+
 ## Development
 
 Unless otherwise noted, the work reported here has the "merged to master" status. It means that the work is completed, reviewed, and integrated into the source code that advanced users can build and run, but is not yet available in release binaries for regular users.
 
-{ hint: add below overview of activity for each project. add any other project that warrants a paragraph, drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans }
+[dcrd](https://github.com/decred/dcrd):
 
-[dcrd](https://github.com/decred/dcrd): {}
+The decentralize treasury spending [pull request](https://github.com/decred/dcrd/pull/2170) is [merged](https://twitter.com/marco_peereboom/status/1308125042149134336) to master. It got 576 review comments, changed 115 files, added 15K lines of code, and took 5 months since the first draft was published. Thanks to everyone for the hard work on this complex change!
+
+DCP0006 describing the treasury consensus change is under [review](https://github.com/decred/dcps/pull/17).
+
+Follow-up treasury work:
+
+- one-way [migration](https://github.com/decred/dcrd/pull/2336) of the database to support the new treasury implementation
+- [tracking](https://github.com/decred/dcrd/pull/2350) of tspend (treasury spend) transactions in the mempool
+- new peer messages to [relay](https://github.com/decred/dcrd/pull/2349) tspend transactions as nodes startup (this is to help both mining nodes and the voting wallets discover tspends in a timely manner)
+- new RPC command to [tally](https://github.com/decred/dcrd/pull/2351) the vote count of tspend transactions (initially, only non-mempool mined tspends are queried)
+- removed [footguns](https://github.com/decred/dcrd/pull/2389) from code for calculating treasury spend window values
+- reworked [consistency](https://github.com/decred/dcrd/pull/2394) in the `standalone` package and brought the test coverage back to 100%
+
+Other merged work:
+
+- optimized signature [cache](https://github.com/decred/dcrd/pull/2358) to proactively evict entries related to transactions in a block that is already 2 blocks deep
+- consolidated ban [disable/whitelist](https://github.com/decred/dcrd/pull/2363) logic
+- more restrictive systemd service [privileges](https://github.com/decred/dcrd/pull/2357)
+- updated [checkpoints](https://github.com/decred/dcrd/pull/2370) and min known [chain work](https://github.com/decred/dcrd/pull/2371) for the upcoming release
+- dependency updates to prepare for the release
+- lots of smaller improvements in test coverage, logging, error handling, etc
 
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
