reddit post writeup

--- a/journal/202009.md
+++ b/journal/202009.md
@@ -268,10 +268,10 @@ Comm systems news:
 
 Selected Reddit posts:
 
-- CloakCoin dev https://www.reddit.com/r/decred/comments/i11tjv/porting_cloak_coins_enigma_protocol_and/g4psjpr/
 - Everyone's favorite Wall Street CEO, /u/jamie-demon, has been busy [adding](https://www.reddit.com/r/decred/comments/j1ia6k/dcrdocs_on_ipfs_and_zeronet/) dcrdocs to IPFS and ZeroNet, and [DCRComic](https://www.reddit.com/r/decred/comments/iw333o/dcr_comic_on_ipfs/) to [IPFS](https://ipfs.io/ipfs/QmTp4mUpekf1Ptj32xZqSJkeEDjo3QrFvWvL7bJJBxH8u4)
 - A [post](https://www.reddit.com/r/decred/comments/iwu75w/bch_has_some_funding_and_governance_issues/) about BCH funding and governance issues attracted 45 comments, mostly in response to someone complaining about DCR.
 - @pavel is arranging an AMA interview and submitted a [post](https://www.reddit.com/r/decred/comments/j2gz5f/ask_me_anything_ama_what_would_you_ask_decreds/) to collect questions at the end of the month
+- In depth [discussion](https://www.reddit.com/r/decred/comments/i11tjv/porting_cloak_coins_enigma_protocol_and/g4psjpr/) about the merits of CloakCoin's Enigma protocol with one of that project's developers 
 
 Selected Twitter discussions:
 
