--- a/journal/202009.md
+++ b/journal/202009.md
@@ -61,7 +61,25 @@ In progress:
 - LN [watchtower](https://github.com/decred/decrediton/pull/2638) support
 - LN [UI/UX](https://github.com/decred/decrediton/pull/2641) improvements
 
-[Politeia](https://github.com/decred/politeia): {}
+[Politeia](https://github.com/decred/politeia):
+
+- added [tests](https://github.com/decred/politeia/pull/1296) for the user database
+- optimized memory usage with [pagination](https://github.com/decred/politeia/pull/1306)
+- admin TOTP [reset](https://github.com/decred/politeia/pull/1298) command
+
+CMS:
+
+- added user [search](https://github.com/decred/politeiagui/pull/2131) back
+- replaced remaining [cache](https://github.com/decred/politeia/pull/1300) usage to clear the way for tlog migration
+- added [LevelDB](https://github.com/decred/politeia/pull/1302) implementation for userdb plugins for CMS (used for testing infrastructire) { is the wording correct? }
+
+In progress:
+
+- [TOTP](https://github.com/decred/politeia/pull/1212) login
+- querying user's code [stats](https://github.com/decred/politeia/pull/1185) for CMS admins
+- tlog implementation on the [backend](https://github.com/decred/politeia/pull/1180) and the [GUI](https://github.com/decred/politeiagui/pull/2142)
+
+{ tlog is an exciting development, summary update is welcome! }
 
 [vspd](https://github.com/decred/vspd): {}
 
