--- a/journal/202009.md
+++ b/journal/202009.md
@@ -159,11 +159,11 @@ Bug Bounty update: https://twitter.com/degeri_crypto/status/1302977687028334594
 - check dcrdata.org (preferred), dcrstats.com and charts.dcr.farm to get the numbers
 - use the same `zoom` parameter for all dcrdata links }
 
-Hashrate: September's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=t1-t2&scale=linear&bin=block&axis=time) {set zoom to show the month} opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month. Pool hashrate [distribution](https://miningpoolstats.stream/decred) as of {date}: {pool name n%, ...}.
+Hashrate: September's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=kegbelov-kfrbnmg7&scale=linear&bin=block&axis=time) opened at ~456.9 Ph/s and closed ~449.6 Ph/s, bottoming at 338 Ph/s and peaking at 609 Ph/s throughout the month. Pool hashrate [distribution](https://miningpoolstats.stream/decred) as of {date}: {pool name n%, ...}.
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
-Staking: [30-day average](https://dcrstats.com/) ticket price was {n.n, try to snapshot it on 1st} DCR (+{n.n}). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=t1-t2&bin=window&axis=time&visibility=true-false&mode=stepped) {set zoom to show the month} varied between {n.n}-{n.n} DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=t1-t2&scale=linear&bin=block&axis=time) was {n.nn}-{n.nn} million DCR, which corresponded to {n.n}-{n.n}% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=t1-t2&scale=linear&bin=block&axis=time) in PoS.
+Staking: [30-day average](https://dcrstats.com/) ticket price was 148.61 DCR (-2.79). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kefkwpha-kfql5q8m&bin=window&axis=time&visibility=true-false) varied between 144.74-152.5 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kegm52g7-kfrme37j&bin=block&axis=time) was 6.05-6.11 million DCR, which corresponded to 50.49-51.03% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kegm52g7-kfrme37j&bin=block&axis=time) in PoS.
 
 { hint: fallback link for locked %: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
 
@@ -177,11 +177,11 @@ Transactions: In September, Decred users made {n} regular transactions and bough
 
 { hint: for dcr.farm set the zoom to show exactly UTC month 1st 00:00:00 - next month 1st 00:00:00 }
 
-Nodes: Throughout [September](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1583020800000&to=1585699200000) {set zoom to show the month} there was an average of {} public listening nodes and {} total nodes per dcr.farm. Version distribution: {vx.y.z: n% (+n%), ...}.
+Nodes: Throughout [September](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1596232800000&to=1598911199000) there was an average of 141 public listening nodes and 136 total nodes per dcr.farm. Average version distribution for September: 26% dcrd v1.5.1, 22% dcrd v1.5.2, 7% dcrd v1.6 dev builds, 7% dcrd v1.5.0, 4% dcrd v1.5 dev and RC builds, 0.8% dcrd v1.4, 17% dcrwallet v1.5.1, 1.6% dcrwallet v1.5, 1.1% dcrwallet v1.4, 15% others.
 
 { any interesting analysis or events in the network }
 
-{ anything found for OKEx? } https://twitter.com/RichardRed0x/status/1302910812428873730
+{ anything found for OKEx? } https://twitter.com/RichardRed0x/status/1302910812428873730 {RR?}
 
 ## Integrations
 
