--- a/journal/202009.md
+++ b/journal/202009.md
@@ -318,7 +318,7 @@ Selected Twitter discussions:
 
 ## Markets
 
-In September DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average daily rate was ${n.nn}.
+In September DCR was trading between USD 17.30-11.03 / BTC 0.00148-0.00106. The average daily rate was $13.26.
 
 { markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis }
 
