--- a/journal/202009.md
+++ b/journal/202009.md
@@ -390,6 +390,6 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 
 Credits (alphabetical order):
 
-- writing and editing: {}
+- writing and editing: bee, degeri, l1ndseymm, richardred
 - reviews and feedback: {}
-- title image: {}
+- title image: saender
