Dev dcrdex, intro

--- a/journal/202009.md
+++ b/journal/202009.md
@@ -4,11 +4,14 @@
 
 _Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
 
-{ introduction, major news of the month ordered by impact, don't put any links here }
+Decred's highlights for September: {
 
 - treasury PR merged
-- dcronchain launch
-- first RFP
+- dcrdex is addressing many sophisticated trustless swap scenarios discovered in testing
+- first RFP got 4 submissions
+- dcronchain site launch
+
+}
 
 ## Development
 
@@ -91,7 +94,26 @@ In progress:
 - updated the codebase to Go 1.13 [error types](https://github.com/decred/dcrpool/pull/245)
 - fixed reconnection [error](https://github.com/decred/dcrpool/pull/247)
 
-[dcrdex](https://github.com/decred/dcrdex): {}
+[dcrdex](https://github.com/decred/dcrdex):
+
+- implemented order history view with filters and infinite scrolling, and order details [view](https://github.com/decred/dcrdex/pull/644) with all matches and relevant transaction outputs
+- show amounts [locked](https://github.com/decred/dcrdex/pull/683) in contracts and update balances in more cases
+- added [`match_status`](https://github.com/decred/dcrdex/issues/643) and [`order_status`](https://github.com/decred/dcrdex/pull/687) routes to recover from unusual cases discovered in testing, like laptops suspending or poor connectivity causing clients to miss the `revoke_match` step (restarting the dexc program fixed it but it was poor UX)
+- improved [reconnection](https://github.com/decred/dcrdex/pull/663) handling
+- more robust handling of [missing](https://github.com/decred/dcrdex/pull/661) matches { is this a good translation to en? }
+- return [active orders](https://github.com/decred/dcrdex/pull/677) on `connect` response
+- [unlock](https://github.com/decred/dcrdex/pull/648) coins in more cases when no longer needed (read [this](https://github.com/decred/dcrdex/pull/648#issuecomment-688585289) random comment to get a taste of how many cases must be considered in a trustless swap protocol)
+- [notify](https://github.com/decred/dcrdex/pull/649) user of penalty
+- grace period for new users when [cancellation](https://github.com/decred/dcrdex/pull/638) rate threshold is not enforced
+- auto-find [redemption](https://github.com/decred/dcrdex/pull/513) when Maker goes dark after Taker swap { what "auto-find" means? }
+- multiple [inaction](https://github.com/decred/dcrdex/pull/680) check fixes { what is "inaction"? is it notable or mostly internal? }
+- require [password](https://github.com/decred/dcrdex/pull/621) for client RPC
+- opt-in debug [logging](https://github.com/decred/dcrdex/pull/654) in the UI
+- bug fixes
+
+A total of 35 PRs from 4 contributors were [merged](https://github.com/decred/dcrdex/pulls?q=is%3Apr+merged%3A2020-09-01..2020-09-30+sort%3Aupdated-asc), adding 9K and deleting 2.6K lines of code.
+
+{ how is it going? how hard issues have been discovered in testing? how to summarize the new conflict resolution system? what's the overall status, what remains? }
 
 [dcrandroid](https://github.com/planetdecred/dcrandroid): {}
 
