--- a/journal/202009.md
+++ b/journal/202009.md
@@ -115,13 +115,23 @@ A total of 35 PRs from 4 contributors were [merged](https://github.com/decred/dc
 
 { how is it going? how hard issues have been discovered in testing? how to summarize the new conflict resolution system? what's the overall status, what remains? }
 
-[dcrandroid](https://github.com/planetdecred/dcrandroid): {}
+[dcrandroid](https://github.com/planetdecred/dcrandroid):
 
-{ also check the base library https://github.com/planetdecred/dcrlibwallet }
+- updated [Chinese](https://github.com/planetdecred/dcrandroid/pull/515) translation
+- bug fixes
 
-[dcrios](https://github.com/planetdecred/dcrios): {}
+In progress:
 
-[godcr](https://github.com/planetdecred/godcr): {}
+- show Politeia [proposals](https://github.com/planetdecred/dcrandroid/pull/503)
+
+[dcrios](https://github.com/planetdecred/dcrios):
+
+- bug fixes
+
+In progress:
+
+- show Politeia [proposals](https://github.com/planetdecred/dcrios/pull/715)
+- automated UI [testing](https://github.com/planetdecred/dcrios/pull/707)
 
 [dcrdata](https://github.com/decred/dcrdata): {}
 
