--- a/journal/202009.md
+++ b/journal/202009.md
@@ -133,19 +133,24 @@ In progress:
 - show Politeia [proposals](https://github.com/planetdecred/dcrios/pull/715)
 - automated UI [testing](https://github.com/planetdecred/dcrios/pull/707)
 
-[dcrdata](https://github.com/decred/dcrdata): {}
+[docs](https://github.com/decred/dcrdocs):
 
-[tinydecred](https://github.com/decred/tinydecred): {}
+- replaced example dev [proposal](https://github.com/decred/dcrdocs/pull/1127) with a larger scale one
+- replace OS-specific collapsible sections with proper [tabs](https://github.com/decred/dcrdocs/pull/1129)
 
-[docs](https://github.com/decred/dcrdocs): {}
+[dev docs](https://github.com/decred/dcrdevdocs):
 
-[decred.org](https://github.com/decred/dcrweb): {}
+- [Ticket Selection](https://devdocs.decred.org/developer-guides/ticket-selection/) page [moved](https://github.com/decred/dcrdocs/pull/1126) from dcrdocs
+- [Overview](https://devdocs.decred.org/developer-guides/transactions/txscript/overview/) and [Opcodes](https://devdocs.decred.org/developer-guides/transactions/txscript/opcodes/) reference [added](https://github.com/decred/dcrdevdocs/pull/86) for the txscript system used in Decred (it is a simple, stack-based, Forth-like programming language)
+
+[decred.org](https://github.com/decred/dcrweb):
+
+- added [Latam](https://github.com/decred/dcrweb/pull/909) contributors
+- backend updates
 
 Other:
 
-- bounty update https://bounty.decred.org/2020/09/status-update/ and rules change https://github.com/decred/dcrbounty/pull/71/files
-
-Dev activity stats for September: {n} active PRs, {n} master commits, {n}K added and {n}K deleted lines spread across {n} repositories. Contributions came from {n}-{n} developers per repository.
+- Bug Bounty program posted a new [update](https://bounty.decred.org/2020/09/status-update/) and made [changes](https://github.com/decred/dcrbounty/pull/71/files) to the rules and scope based on experience with recent submissions
 
 ## People
 
@@ -233,6 +238,8 @@ Novadax card (same as above !)
 - https://matrix.to/#/!rLQWsgjPJFAClvskmU:decred.org/$QD-Fxk-3mm9wiuR3f1DQqJ-K4yQQcFFmoQYfx8r40jE
 - https://twitter.com/Decred_BR/status/1305922555124035584
 
+
+Swyftx has been up for a while https://github.com/decred/dcrweb/pull/907
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
