--- a/journal/202009.md
+++ b/journal/202009.md
@@ -196,7 +196,7 @@ Bug Bounty update: https://twitter.com/degeri_crypto/status/1302977687028334594
 - check dcrdata.org (preferred), dcrstats.com and charts.dcr.farm to get the numbers
 - use the same `zoom` parameter for all dcrdata links }
 
-Hashrate: September's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=kegbelov-kfrbnmg7&scale=linear&bin=block&axis=time) opened at ~456.9 Ph/s and closed ~449.6 Ph/s, bottoming at 338 Ph/s and peaking at 609 Ph/s throughout the month. Pool hashrate [distribution](https://miningpoolstats.stream/decred) as of {date}: {pool name n%, ...}.
+Hashrate: September's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=kegbelov-kfrbnmg7&scale=linear&bin=block&axis=time) opened at ~456.9 Ph/s and closed ~449.6 Ph/s, bottoming at 338 Ph/s and peaking at 609 Ph/s throughout the month. Pool hashrate [distribution](https://miningpoolstats.stream/decred) as of Oct 1: UUPool 34.91%, Poolin 27.21%, Huobipool 11.42%, easy2mine 10.40%, Antpool 9.19%, BTC.com 2.88%, Luxor 0.86%, F2Pool 0.54%, okex 0.19%, CoinMine 0.02%, Other 2.37%.
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
