Dev dcrros details

--- a/journal/202009.md
+++ b/journal/202009.md
@@ -143,6 +143,8 @@ In progress:
 
 - [updated](https://github.com/decred/dcrros/pull/6) to the v1.4.4 of the Rosetta specs which includes the ability to construct, sign and publish transactions. The `check:construction` suite of tests of the corresponding rosetta-cli for this spec is passing on this PR.
 
+Rosetta v1.4 released the [Construction API](https://www.rosetta-api.org/docs/construction_api_introduction.html) (formerly Wallet API) for constructing transactions in a standard format, which was not finished when we announced Decred's Rosetta implementation back in [June](202006.md). This API is supported by the latest dcrros and work is ongoing to keep it up with the spec, as well as the upcoming changes in Decred consensus.
+
 [docs](https://github.com/decred/dcrdocs):
 
 - replaced example dev [proposal](https://github.com/decred/dcrdocs/pull/1127) with a larger scale one
