Dev mention tspend tool

--- a/journal/202009.md
+++ b/journal/202009.md
@@ -41,6 +41,8 @@ Other merged work:
 - dependency updates to prepare for the release
 - lots of smaller improvements in test coverage, logging, error handling, etc
 
+@matheusd wrote a standalone [tool](https://github.com/matheusd/tspend) to generate tspend transactions that can be used on air-gapped setups (without requiring a network connection to an underlying dcrd instance). It can be used in combination with @jrick's [ss](https://github.com/jrick/ss) tool for for post-quantum file and stream encryption.
+
 [dcrwallet](https://github.com/decred/dcrwallet):
 
 - decentralized treasury spending [support](https://github.com/decred/dcrwallet/pull/1714), including a new tool for network operators to generate treasury keys
