--- a/journal/202009.md
+++ b/journal/202009.md
@@ -168,17 +168,7 @@ Other:
 
 ## People
 
-{ hint: list people who made meaningful commits merged in master branches, in alphabetical order }
-
-Welcome to new first time contributors with code merged to master: {@handle} ([{repo}]({link to user's commits})), ...
-
 Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}). { hint: check the CMS }
-
-{ welcome new corporate contractors with short intros, if any }
-
-{ updates from existing contractors }
-
-{ interviews about people }
 
 Community stats as of Oct 1:
 
@@ -190,6 +180,8 @@ Community stats as of Oct 1:
 - YouTube subscribers: 4,210 (+30), views: 156K (+1.7K)
 - LinkedIn followers: 891 (+16)
 - GitHub dcrd stars: 563 (+6), forks: 248 (+2)
+
+Charts of these stats are available in the [social-media-stats](https://github.com/decredcommunity/social-media-stats/blob/graphs/graphs/index.md) repository (more accounts tracked) and on Planet Decred's [dcrextdata](https://dcrextdata.planetdecred.org/community) instance (dynamic charts with high resolution).
 
 ## Governance
 
