--- a/journal/202009.md
+++ b/journal/202009.md
@@ -379,27 +379,21 @@ Bitcoin Cash's current situation was [summarised](https://read.cash/@Cain/the-cu
 
 Bitshares has a [forthcoming](https://finbold.com/binance-huobi-announces-support-for-upcoming-bitshares-hardfork/) hardfork which is being supported by Binance and Huobi, after the Bitshares China Association alleged that one of the Bitshares developers had tampered with voting system code without community approval.
 
+The SushiSwap saga provided peak DeFi drama in September. SushiSwap is a "decentralized exchange" running on Ethereum which copied the open source smart contracts of an established (VC-funded) decentralized exchange, UniSwap. When the SushiSwap developer, Chef Nomi, announced that SushiSwap would do a "fair launch" and grant almost all the SUSHI tokens to liquidity providers, SushiSwap began to draw a lot of liquidity away from UniSwap, and SUSHI gained considerable value in a short space of time. 10% of all the SUSHI tokens go into a development fund, and when the hype was peaking Chef Nomi liquidated the dev SUSHI (worth over $10 million at the time) for ETH and announced that he was not exit scamming because he would still be around to do development, but he had sold all the dev SUSHI. This was not well received by the SUSHI community, who sought to replace Nomi in short order, with Nomi then handing the reigns (keys?) to Sam Bankman-Fried of the FTX exchange. SushiSwap then went on to elect a set of multi-sig governors with a token vote. Subsequently, Chef Nomi [returned](https://www.coindesk.com/sushiswap-creator-chef-nomi-returns-dev-fund) along with the ETH they had obtained by selling dev SUSHI, offering that the community determine how much they should be rewarded for their part. There was some speculation that Chef Nomi had been effectively unmasked and did not want to live with the stigma of their hasty exit.
 
+UniSwap [launched](https://uniswap.org/blog/uni/) their own token, UNI, in response to SUSHI's success and the amount of liquidity it was attracting. 60% of the genesis tokens (intended to cover the first four years) are available to liquidity providers, with an initial 15% being allocated to people who had used UniSwap before a cut-off of early Sep. The remaining 40% of UNI is allocated to investors and employees.
+
+Ethereum Classic Labs have [teamed](https://medium.com/etc-core/ethereum-classic-labs-teams-up-with-openrelay-and-chainsafe-8248d1182612) up with Chainsafe and OpenRelay to develop a solution which prevents further 51% attacks. 3 days after the teaming up announcement there is already a comprehensive [MESS](https://medium.com/etc-core/agreeing-to-disagree-proposing-a-weakly-subjective-finality-solution-for-ethereum-classic-7daad47efc0e) plan for weakly-subjective finality.
 
 { any Sep update on the ETC funding votes? }
-
-https://twitter.com/cryptobuzznews/status/1302221131772866560 { wow is this real? if yes, is this relevant? :) }
 
 The KuCoin exchange (which lists DCR) was hacked, and a [reported](https://www.coindesk.com/hackers-drain-kucoin-crypto-exchanges-funds) $150 million was stolen, later [upgraded](https://www.coindesk.com/kucoin-ceo-says-perpetrators-of-281m-hack-identified-authorities-on-the-case) to $281 million, although $204 million was subsequently [recovered](https://www.coindesk.com/kucoin-ceo-says-perpetrators-of-281m-hack-identified-authorities-on-the-case) (with help from the operators of centralized stablecoins), and KuCoin claim to have identified the suspects and reported them to law enforcement authorities.
 
 Coinbase Pro [announced](https://twitter.com/CoinbasePro/status/1306641678506360832) that fees for crypto withdrawals would now be passed on to customers (Coinbase had previously covered these to provide "free" withdrawals). 
 
-https://twitter.com/aleph_im/status/1309946131183529986?s=20
+The bZxHQ DeFi lender was subjected to another [exploit](https://www.coindesk.com/defi-lender-bzx-third-attack), this time for $8 million, which is larger than the previous two exploits earlier this year. They have an insurance fund which is covering the damage.
 
-https://twitter.com/eth_classic/status/1307302168966373377?s=20
-
-https://twitter.com/semenov_roman_/status/1305255435730063361?s=20
-
-https://twitter.com/Blockstream/status/1304529416131940352?s=20
-
-SUSHI and Chef Nomi
-
-Uniswap airdrop
+Square [formed](https://www.coindesk.com/square-alliance-patents-crypto) the Cryptocurrency Open Patent Alliance (COPA), where members pledge to never assert patent rights for offensive purposes, and in turn can use the patents of any member organization defensively, if required. Blockstream [tweeted](https://twitter.com/Blockstream/status/1304529416131940352) about joining COPA as the next step in their defensive patent strategy.
 
 The Polkadot Treasury received its first [proposals](https://polkadot.network/writing-history-the-first-teams-submit-their-proposal-to-the-polkadot-treasury-2/). Polkadot's Treasury is funded by transaction fees, slashing and staking inefficiencies - and every 24 days if these funds are not used 1% of the balance is burned. The funds are presently administered by the Polkadot Council, and the first four teams to be funded this way are working on a development environment for pallet-contracts, a Go Substrate RPC Client, Polkascan, and a platform for local community currencies and self-issued universal basic income.
 
@@ -411,6 +405,8 @@ They just voted to fund common goods and marketing with 20% of the block reward.
 
 https://twitter.com/jackbplatts/status/1301947227305279489
 
+{kind of interesting although quite obscure too}
+
 }
 
 { DEX }
@@ -419,9 +415,11 @@ https://twitter.com/jackbplatts/status/1301947227305279489
 
 { other: regulations, privacy, security, fun }
 
-https://decrypt.co/41024/researchers-find-new-way-for-criminals-to-launder-money-using-bitcoin { good? }
+This [article](https://decrypt.co/41024/researchers-find-new-way-for-criminals-to-launder-money-using-bitcoin) about "private mining", where a user gives their transaction to a specific miner, who collects the associated reward whenever they mine it in a block, sees it as a possible tool for money laundering, and in a future potentially also a legitimate source of miner income. 
 
-https://cointelegraph.com/news/the-irs-offers-a-625-000-bounty-to-anyone-who-can-break-monero-and-lightning
+https://decrypt.co/41024/researchers-find-new-way-for-criminals-to-launder-money-using-bitcoin { good? interesting, but the researchers themselves say it is not "new" }
+
+The United States Internal Revenue Service are [offering](https://cointelegraph.com/news/the-irs-offers-a-625-000-bounty-to-anyone-who-can-break-monero-and-lightning) a bounty of $625,000 to anyone who can provide a working prototype of technology to trace Monero or Lightning Network transactions. The deadline was Sep 16, so unfortunately it is now too late to cash in on that privacy-breaking prototype, if you happen to have one to hand.
 
 Relevant External fans will likely enjoy the [@Scams_alarms](https://twitter.com/Scams_alarms) account.
 
