--- a/journal/202009.md
+++ b/journal/202009.md
@@ -207,34 +207,13 @@ Nodes: Throughout [September](https://charts.dcr.farm/d/000000014/nodes?orgId=1&
 
 ## Integrations
 
-{ hint: new pieces of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors. use bullets or paragraphs, whatever looks best in a given month's compilation }
+Brazilian NovaDAX exchange that [listed](https://twitter.com/Decred_BR/status/1275190825060794377) DCR in June now [added](https://twitter.com/Decred_BR/status/1305922555124035584) DCR support on their debit cards. This will allow access to over 23,000 ATMs and POS terminals around the country. 
 
-{ check https://github.com/decred/dcrwebapi/commits/master for changes to the VSP list }
+> NovaDAX is top 3 in the BR market. With the new debit card it's possible to pay any bill in places that accept [Elo](https://en.wikipedia.org/wiki/Elo_(card_association)), which in Brazil has the same adoption as Visa and Mastercard. In addition it's possible to make bank transfers in BRL, deducting DCR from your account and without paying transfer fees, something that all banks in Brazil charge for. It's also possible to exchange DCR for BRL in Banco24horas ATMs, with around 23 thousand machines in Brazil. NovaDAX is opening a branch in Portugal and intends to do the same in the European market. ([@emiliomann](https://matrix.to/#/!rLQWsgjPJFAClvskmU:decred.org/$QD-Fxk-3mm9wiuR3f1DQqJ-K4yQQcFFmoQYfx8r40jE))
 
-
-Novadax exchange (BR) [added](https://twitter.com/Decred_BR/status/1305922555124035584) support for Decred on their debit cards. This will allow access to over 23,000 ATM's and POS terminals around the country. 
-
-BR ATMs
-
-- https://www.reddit.com/r/decred/comments/itqneq/decred_on_23000_atms_in_brazil/
-
-Novadax card (same as above !)
-
-- https://matrix.to/#/!rLQWsgjPJFAClvskmU:decred.org/$QD-Fxk-3mm9wiuR3f1DQqJ-K4yQQcFFmoQYfx8r40jE
-- https://twitter.com/Decred_BR/status/1305922555124035584
-
-
-Swyftx has been up for a while https://github.com/decred/dcrweb/pull/907
+Australian [Swyftx](https://swyftx.com.au/) was [added](https://github.com/decred/dcrweb/pull/907) to decred.org, although it had DCR for a while. The exchange has many [features](https://swyftx.com.au/features/) and allows to buy DCR with AUD.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
-
-## Adoption
-
-{ new merchants }
-
-{ applications of Decred blockchain and related projects: Politeia, dcrtime, atomicswap }
-
-{ investment adoption }
 
 ## Outreach
 
